k8s/templates/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: nginx-app
  template:
      metadata:
        labels:
          app: nginx-app
      spec:
        containers:
        - name: nginx
          image: dapasa/nginx-custom-html:${DOCKER_IMAGE_TAG}
