k8s/templates/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
spec:
  ingressClassName: ${INGRESS_CLASS_NAME}
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: ${PATH}
            pathType: Prefix
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
